--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         mollis, in tincidunt erat pretium. Sed pulvinar, massa ac porta viverra.
         <img src="/pexels-robin-stickel-70497.jpg" alt=" burger" />
       </p>
-      <a href="/simpotel/lorem.html"> Click Me </a>
+      <a href="/lorem.html"> Click Me </a>
     </div>
   </body>
 </html>
