--- a/lorem.html
+++ b/lorem.html
@@ -9,7 +9,7 @@
   <body>
     <h3>LOREM IPSUM</h3>
     <h1>LOREM IPSUM SET ADEMIR</h1>
-    <a href="/simpotel/index.html"> Click </a>
+    <a href="/index.html"> Click </a>
     <img id="arrow" src="/icons8-arrow-30.png" />
   </body>
 </html>
